--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         <img id="middle" src="http://placehold.it/250x250" />
         <img id="right" src="http://placehold.it/250x250" />
       </section>
+      <section>
+        <ul id="results">
+        </ul>
+      </section>
     </main>
     <script src="app.js"></script>
   </body>
