--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <img id="left" src="http://placehold.it/250x250" />
         <img id="middle" src="http://placehold.it/250x250" />
         <img id="right" src="http://placehold.it/250x250" />
+        <button id="button" type="button">Show me the Results</button>
+        <canvas id="barGraph" width="600" height="400"></canvas>
       </section>
     </main>
     <script src="app.js"></script>
