Revamped code for local storage use. Altered CSS.

--- a/index.html
+++ b/index.html
@@ -13,20 +13,18 @@
     </header>
     <main>
       <div class="thanks">
-        <p>Thanks for participating in our survey! We want to provide our customers with the best possible merchandise to choose from in the future. We appreciate your help in helping us decide what the best items would be to offer to our customers! If you have any concerns or further questions, please contact us at cityBusMallService@example.com.</p>
+        <p>Thanks for participating in our survey! We want to provide our customers with the best possible merchandise to choose from. We appreciate your help in helping us decide what the best items would be to offer to our customers!</p>
         <p>We will be showing you 25 sets of 3 images of products that we may potentially offer. Please choose the item that you like the most out of the products shown for each set.</p>
       </div>
       <section class="images" id="container">
         <img id="left" src="http://placehold.it/250x250" />
         <img id="middle" src="http://placehold.it/250x250" />
         <img id="right" src="http://placehold.it/250x250" />
-        <button id="button" type="button">Show me the Results</button>
-        <canvas id="barGraph" width="600" height="400"></canvas>
       </section>
-      <section>
-        <ul id="results">
-        </ul>
-      </section>
+    <section class="button">
+      <button id="button" type="button">Show me the Results</button>
+      <canvas id="barGraph" width="600" height="200"></canvas>
+    </section>
     </main>
     <script src="app.js"></script>
   </body>
